[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Equitment_slots.gd" type="Script" id=2]

[node name="icon3" type="Sprite"]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
